# grid-screen

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
benches/: overlay_bench.rs
docs/superpowers/plans/: 2026-07-09-grid-screen-implementation.md  2026-07-10-stitch-ui-refresh-implementation.md  2026-07-14-grid-screen-mvp-plan.md
docs/superpowers/reviews/: 2026-07-09-grid-screen-plan-review.md  2026-07-09-grid-screen-spec-review.md  2026-07-10-differential-code-review.md  2026-07-10-stitch-ui-refresh-plan-review.md  2026-07-10-stitch-ui-refresh-spec-review.md  2026-07-14-grid-screen-spec-review.md
docs/superpowers/specs/: 2026-07-09-grid-screen-design.md  2026-07-10-stitch-ui-refresh-design.md  (+2 more)
mockups/: design-1-aurora-dark.html  design-2-daylight-warm.html  design-3-grid-pro.html  index.html
scripts/: install.ps1  install.sh  uninstall.sh
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: gridscreen.json
src-tauri/src/: app_shell.rs  app_state.rs  arrange_orchestrator.rs  config_store.rs  diagnostics.rs  drag_detector.rs  layout_engine.rs  layout_manager.rs  lib.rs  main.rs  monitor_manager.rs  perf.rs  platform_adapter.rs  types.rs  user_notifier.rs  wayland_adapter.rs  window_catalog.rs  x11_adapter.rs  zone_overlay.rs
src-tauri/src/platform/: hyprland.rs  linux.rs  mock.rs  mod.rs  windows.rs
src-tauri/tests/: config_store_tests.rs  drag_detector_tests.rs  layout_manager_tests.rs  monitor_manager_tests.rs  security_smoke.rs  zone_overlay_tests.rs
src-tauri/wayland-protocol/: wayland-helper.c
src/components/: ActionBar.svelte  ArrangeStateOverlay.svelte  ArrangeView.svelte  CanvasArea.svelte  CanvasToolbar.svelte  DetailPanel.svelte  LayoutCard.svelte  LayoutQuickButtons.svelte  LayoutSelector.svelte  LayoutSliders.svelte  LayoutsView.svelte  NewLayoutModal.svelte  ScreenCanvas.svelte  ScreenSelector.svelte  SearchBox.svelte  SettingsGroup.svelte  SettingsView.svelte  SnapControls.svelte  SystemStatusPanel.svelte  TabNav.svelte  TitleBar.svelte  ToastContainer.svelte  WindowCard.svelte  WindowCatalog.svelte  ZoneSlot.svelte
src/lib/: commands.ts  events.ts  i18n.ts  icons.ts  ipc.ts  notifications.ts  shared-types.ts  stores.ts  theme.css  types.ts  view-models.ts
src/lib/components/: Badge.svelte  (+11 more)
src/routes/: LayoutEditor.svelte  LayoutManager.svelte  Settings.svelte  SystemStatus.svelte
(+28 files in other folders)
